# tcurl-wrapper

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README  README.md
include/: .curl_mgr.hxx.swn  .curl_mgr.hxx.swo  .curl_mgr.hxx.swp  curl_mgr.hxx
src/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cxx
src/tc-wpr/: .curl_mgr.cxx.swp  CMakeLists.txt  curl_mgr.cxx
src/tc-wpr/test/: CMakeLists.txt  test_curl_mgr.cxx  test_curl_mgr1.cxx  test_curl_mgr2.cxx  test_curl_mgr3.cxx
